apps/phpldapadmin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
spec:
  selector:
    app.kubernetes.io/name: phpldapadmin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
