apps/phpldapadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpldapadmin
spec:
  rules:
  - host: "ldap.lab.tintinho.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpldapadmin
            port:
              number: 80
